--- a/index.html
+++ b/index.html
@@ -20,19 +20,11 @@
 		<div class="section">
 			<div class="row">
 				<div class="col s12 m10">
+					<a id="btn-optimize" class="waves-effect waves-light button btn white-text gamesense-green-bg">Optimize</a>
+					<a id="btn-beautify" class="waves-effect waves-light button btn white-text gamesense-green-bg">Beautify</a>
 					<div class="card blue-grey z-depth-2">
 						<div class="card-content card-editor white-text">
 							<div class="editor" id="editor"></div>
-						</div>
-					</div>
-				</div>
-				<div class="col s12 m2">
-					<div class="row">
-						<div class="col s6 m12">
-							<a id="btn-optimize" class="waves-effect waves-light button btn-large white-text gamesense-green-bg">Optimize</a>
-						</div>
-						<div class="col s6 m12">
-							<a id="btn-beautify" class="waves-effect waves-light button btn white-text gamesense-green-bg">Beautify</a>
 						</div>
 					</div>
 				</div>
