--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link type="text/css" rel="stylesheet" href="/css/app.css"/>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-	<title>gamesensical lua optimizer</title>
+	<title>Lua optimizer</title>
 </head>
 
 <body class="grey darken-4">
