--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 	</nav>
 
 	<div class="container">
-		<div class="section">
+		<div>
 			<div class="row">
 				<div class="col s12 m10">
-					<a id="btn-optimize" class="waves-effect waves-light button btn white-text gamesense-green-bg">Optimize</a>
-					<a id="btn-beautify" class="waves-effect waves-light button btn white-text gamesense-green-bg">Beautify</a>
+					<a id="btn-optimize" class="waves-effect waves-light btn white-text gamesense-green-bg">Optimize</a>
+					<a id="btn-beautify" class="waves-effect waves-light btn white-text gamesense-green-bg">Beautify</a>
 					<div class="card blue-grey z-depth-2">
 						<div class="card-content card-editor white-text">
 							<div class="editor" id="editor"></div>
