--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		</div>
 	</nav>
 
-	<div class="container">
+	<div class="container" style="margin-top: 10px;">
 		<div>
 			<div class="row">
 				<div class="col s12 m10">
