--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
 
 <body class="grey darken-4">
 	<nav class="nav" role="navigation">
-		<div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo gamesense-green">Lua optimizer</a>
+		<div class="nav-wrapper container">
+			<a id="logo-container" href="#" class="brand-logo gamesense-green">Lua optimizer</a>
+			<a id="logo-container" href="https://github.com/whyredow/lua-optimizer" class="brand-logo gamesense-green">
+				<img src="https://files.catbox.moe/idpbt0.svg">
+			</a>
 		</div>
 	</nav>
 
